# docs/swagger.json
@@ -297,7 +297,7 @@
                 "parameters": [
                     {
                         "type": "file",
-                        "description": "Avatar image file",
+                        "description": "Avatar image file (JPG, JPEG, PNG, GIF only)",
                         "name": "avatar",
                         "in": "formData",
                         "required": true
@@ -312,6 +312,24 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
